Updated resume and copy

--- a/index.html
+++ b/index.html
@@ -120,8 +120,8 @@
 							<div class="row">
 								<div class="eight columns offset-by-four omega">
 									<p class="align-left subtitle"><strong>I'm Michael Suen — designer, illustrator, &amp; writer.</strong><p>
-									<p class="align-left">I run a small design studio called Suen Labs, where we <a href="#" class="workplay"><span>work</span></a> with good people to ship awesome websites, brands, applications, and campaigns. I'm of the belief that the best user experiences blur the line between <a href="#" class="workplay"><span>work</span></a> and <a href="#" class="playwork"><span>play</span></a>. Audiences love using them, and we love making them.</p>
-									<p class="align-left">Projects I've <a href="#" class="workedplayed"><span>worked on</span></a> have been featured by Wired, TechCrunch and NPR, and involved partners like MIT, the United Nations, and the Gates Foundation. I've collaborated with multimillion dollar firms, one-man startups, the creator of a classic children's computer game, and a four-time Emmy-winning composer. In a former life, I produced digital content at the MIT spin-off &nbsp;<a href="http://www.learninggamesnetwork.org/">Learning Games Network</a>.</p>
+									<p class="align-left">I run a small design studio called Suen Labs, where we <a href="#" class="workplay"><span>work</span></a> with good people to ship awesome websites, products, and stories. My specialty: colorful brands and friendly interactions that help startups and small businesses connect with their audience. I'm of the belief that the best user experiences blur the line between <a href="#" class="workplay"><span>work</span></a> and <a href="#" class="playwork"><span>play</span></a>. Audiences love using them, and we love making them.</p>
+									<p class="align-left">Projects I've <a href="#" class="workedplayed"><span>worked on</span></a> have been featured by Wired, The Boston Globe, TechCrunch and NPR, won awards at South by Southwest Interactive and the Games for Change Festival, and involved partners like MIT, the United Nations and the Gates Foundation. I've collaborated with multi-million dollar firms, one-man startups, two TED speakers, and the creator of a classic children's computer game. In a former life, I made <a href="http://www.yuco.com/lab" target="_blank">holograms for museums</a> and <a href="http://www.learninggamesnetwork.org" target="_blank">video games for schools</a>.</p>
 									<p class="align-left">Spawned in the <a href="#tarpits" rel="leanModal">tar pits</a> of L.A., raised by <a href="#capitalist" rel="leanModal">capitalist wolves</a> in Hong Kong, and educated on the <a href="http://en.wikipedia.org/wiki/Middlebury_College" target="_blank">ice planet</a> of Vermont, I now spend my time between my home base in Cambridge, MA and coffeeshops elsewhere in the world.</p>
 								</div>
 							</div>
@@ -253,7 +253,7 @@
 						<div class="ten columns offset-by-three alpha omega animated" id="sign-up" data-animated="fadeInUp">
 							<h2>Let's <span class="typewriter">build</span>something together.</h2>
 							<div class="email-me fourteen columns offset-by-one alpha omega">
-								<p><strong>I'm not taking on any new projects in 2015.</strong> But — if you leave me your email, we'll have virtual coffee over Skype.</p>
+								<p><strong>I'm not taking on any new projects in 2015.</strong> But leave me your email if you have a really good idea.</p>
 								<!-- Begin MailChimp Signup Form -->
 								<div id="mc_embed_signup">
 								<form action="//whoismichaelsuen.us10.list-manage.com/subscribe/post?u=4ece89052ce51cd658a6e3155&amp;id=92a752c854" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
