--- a/index.html
+++ b/index.html
@@ -253,10 +253,12 @@
 						<div class="ten columns offset-by-three alpha omega animated" id="sign-up" data-animated="fadeInUp">
 							<h2>Let's <span class="typewriter">build</span>something together.</h2>
 							<div class="email-me fourteen columns offset-by-one alpha omega">
-								<p><strong>I'm not taking on any new projects in 2015.</strong> But leave me your email if you have a really good idea.</p>
+								<p><strong>I'm not taking on any new projects in 2015.</strong></p>
+								<p>But I <em>do</em> write about creativity, culture, and being a twentysomething in my personal email list. Follow along to learn what I'm up to.</p>
 								<!-- Begin MailChimp Signup Form -->
 								<div id="mc_embed_signup">
-								<form action="//whoismichaelsuen.us10.list-manage.com/subscribe/post?u=4ece89052ce51cd658a6e3155&amp;id=92a752c854" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+								<form action="//whoismichaelsuen.us10.list-manage.com/subscribe/post?u=4ece89052ce51cd658a6e3155&amp;id=12c6ad1202" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate="">
+								<!--<form action="//whoismichaelsuen.us10.list-manage.com/subscribe/post?u=4ece89052ce51cd658a6e3155&amp;id=92a752c854" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>-->
 								    <div id="mc_embed_signup_scroll">
 								<div class="mc-field-group">
 									<input type="text" value="" name="FNAME" class="" id="mce-FNAME" placeholder="First Name"><div class="input-validation"></div>
@@ -268,7 +270,8 @@
 									<div class="response" id="mce-error-response" style="display:none"></div>
 									<div class="response" id="mce-success-response" style="display:none"></div>
 								</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-							    <div style="position: absolute; left: -5000px;"><input type="text" name="b_4ece89052ce51cd658a6e3155_92a752c854" tabindex="-1" value=""></div>
+								<div style="position: absolute; left: -5000px;"><input type="text" name="b_4ece89052ce51cd658a6e3155_12c6ad1202" tabindex="-1" value=""></div>
+							    <!--<div style="position: absolute; left: -5000px;"><input type="text" name="b_4ece89052ce51cd658a6e3155_92a752c854" tabindex="-1" value=""></div>-->
 							    <div class="clear"><input type="submit" value="Let's Talk" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
 							    </div>
 							</form>
