--- a/index.html
+++ b/index.html
@@ -382,6 +382,10 @@
 	  ga('send', 'pageview');
 
 	</script>
+	<script src='https://cdn.slaask.com/chat.js'></script>
+	<script>
+	    _slaask.init('da809aaeab4091a4931ed95279366045');
+	</script>
 </div>
 <div id="tarpits">
 	<img src="https://farm8.staticflickr.com/7188/6970635809_aee672164c.jpg">
