Changed due date

--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
 						<div class="ten columns offset-by-three alpha omega animated" id="sign-up" data-animated="fadeInUp">
 							<h2>Let's <span class="typewriter">build</span>something together.</h2>
 							<div class="email-me fourteen columns offset-by-one alpha omega">
-								<p><strong>I have <em>one</em> spot available starting April 2016.</strong></p>
+								<p><strong>I currently <em>fully booked</em> until June 2016.</strong></p>
 								<p>If you're finally serious about turning your brand or product into a <strong>memorable experience</strong> with real personality and impact, I'd love to hear from you.</p>
 								<!-- Begin MailChimp Signup Form -->
 								<div id="mc_embed_signup">
