--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
 						<div class="ten columns offset-by-three alpha omega animated" id="sign-up" data-animated="fadeInUp">
 							<h2>Let's <span class="typewriter">build</span>something together.</h2>
 							<div class="email-me fourteen columns offset-by-one alpha omega">
-								<p><strong>I currently <em>fully booked</em> until June 2016.</strong></p>
+								<p><strong>I am opening <em>one spot</em> starting in July 2016.</strong></p>
 								<p>If you're finally serious about turning your brand or product into a <strong>memorable experience</strong> with real personality and impact, I'd love to hear from you.</p>
 								<!-- Begin MailChimp Signup Form -->
 								<div id="mc_embed_signup">
@@ -272,7 +272,7 @@
 								</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
 								<div style="position: absolute; left: -5000px;"><input type="text" name="b_4ece89052ce51cd658a6e3155_12c6ad1202" tabindex="-1" value=""></div>
 							    <!--<div style="position: absolute; left: -5000px;"><input type="text" name="b_4ece89052ce51cd658a6e3155_92a752c854" tabindex="-1" value=""></div>-->
-							    <div class="clear"><input type="submit" value="Book My Free Consultation" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+							    <div class="clear"><input type="submit" value="Book A Consultation" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
 							    </div>
 							</form>
 							</div>
