--- a/index.html
+++ b/index.html
@@ -382,10 +382,11 @@
 	  ga('send', 'pageview');
 
 	</script>
-	<script src='https://cdn.slaask.com/chat.js'></script>
-	<script>
-	    _slaask.init('da809aaeab4091a4931ed95279366045');
+	<!-- Start of Async Drift Code for michael@suenlabs.com-->
+	<script>!function(t){function e(r){if(o[r])return o[r].exports;var n=o[r]={exports:{},id:r,loaded:!1};return t[r].call(n.exports,n,n.exports,e),n.loaded=!0,n.exports}var o={};return e.m=t,e.c=o,e.p="",e(0)}([function(t,e){!function(){var t;return t=window.driftt=window.drift=window.driftt||[],t.init?void 0:t.invoked?void(window.console&&console.error&&console.error("Driftt snippet included twice.")):(t.invoked=!0,t.methods=["identify","track","reset","debug","show","ping","page","hide","off","on"],t.factory=function(e){return function(){var o;return o=Array.prototype.slice.call(arguments),o.unshift(e),t.push(o),t}},t.methods.forEach(function(e){t[e]=t.factory(e)}),t.load=function(){var t,e,o,r;t=3e5,r=Math.ceil(new Date/t)*t,o=document.createElement("script"),o.type="text/javascript",o.async=!0,o.crossorigin="anonymous",o.src="https://js.driftt.com/include/"+r+"/st6vkfa5bd8h.js",e=document.getElementsByTagName("script")[0],e.parentNode.insertBefore(o,e)},t.SNIPPET_VERSION="0.1.0",t.load())}()}]);
+	//# sourceMappingURL=browser-snippet.js.map
 	</script>
+	<!-- End of Async Drift Code for michael@suenlabs.com -->
 </div>
 <div id="tarpits">
 	<img src="https://farm8.staticflickr.com/7188/6970635809_aee672164c.jpg">
