--- a/index.html
+++ b/index.html
@@ -120,8 +120,8 @@
 							<div class="row">
 								<div class="eight columns offset-by-four omega">
 									<p class="align-left subtitle"><strong>I'm Michael — a product designer for bold clients.</strong><p>
-									<p class="align-left">I run a design collective called <strong>WEIRDO</strong>, where we <a href="#" class="workplay"><span>work</span></a> with bold organizations to build vivid brands, campaigns, and digital products their tribe will ❤️. I believe the best experiences blur the line between <a href="#" class="workplay"><span>work</span></a> and <a href="#" class="playwork"><span>play</span></a>. Users love using them, and I love making them.</p>
-									<p class="align-left">Projects I've <a href="#" class="workedplayed"><span>worked on</span></a> have been featured in <em>TechCrunch</em>, <em>Wall Street Journal</em> and <em><abbr title="National Public Radio">NPR</abbr></em>, won awards at <abbr title="South by Southwest">SXSW</abbr> and Games for Change, and involved partners like the United Nations and the Gates Foundation. I've taught UX design at General Assembly and lectured on playful design at <abbr title="Massachussetts Institute of Technology">MIT</abbr> and Haverford College. In a former life, I helped make <a href="http://www.yuco.com/lab" target="_blank">holograms for museums</a> and <a href="http://www.learninggamesnetwork.org" target="_blank">video games for schools</a>.</p>
+									<p class="align-left">I run a design collective called <strong>WEIRDO</strong>, where we <a href="#" class="workplay"><span>work</span></a> with innovative organizations to build bold brands, campaigns, and digital products their tribe will ❤️. I believe the best experiences blur the line between <a href="#" class="workplay"><span>work</span></a> and <a href="#" class="playwork"><span>play</span></a>. Users love using them, and I love making them.</p>
+									<p class="align-left">Projects I've <a href="#" class="workedplayed"><span>worked on</span></a> have been featured in <em>TechCrunch</em>, <em>Wall Street Journal</em> and <em><abbr title="National Public Radio">NPR</abbr></em>, won awards at <abbr title="South by Southwest">SXSW</abbr> and Games for Change, and involved partners like the United Nations and the Gates Foundation. I've taught <abbr title="user experience">UX</abbr> design at General Assembly and lectured on playful design at <abbr title="Massachussetts Institute of Technology">MIT</abbr> and Haverford College. In a former life, I <a href="#" class="workedplayed"><span>worked on</span></a> <a href="http://www.yuco.com/lab" target="_blank">holograms for museums</a> and <a href="http://www.learninggamesnetwork.org" target="_blank">video games for schools</a>.</p>
 									<p class="align-left">Spawned in the <a href="#tarpits" rel="leanModal">tar pits</a> of <abbr title="Los Angeles">L.A.</abbr>, raised by <a href="#capitalist" rel="leanModal">capitalist wolves</a> in Hong Kong, and educated on the <a href="http://en.wikipedia.org/wiki/Middlebury_College" target="_blank">icy planet</a> of <strike>Hoth</strike> Vermont, I now scheme from my home base in Boston and coffeeshop outposts around the world. <a href="#contact">Hire me, if you dare.</a></p>
 								</div>
 							</div>
@@ -139,7 +139,7 @@
 								<cite>Jonathan Lau, CEO (SwitchUp)</cite>
 							</blockquote>
 							<p class="align-left">Lots of designers can deliver eye candy — I know I can. But my clients don't trust me with their life's work because my buttons are beautiful. They understand that <em>real, lasting success goes beyond a font or a color</em>.</p>
-							<p class="align-left">Successful design should stand for something. Successful design should make your users fall in love. <strong>And when it's really done its job, successful design should make a difference</strong>. The kind that gets results.</p>
+							<p class="align-left">Successful design should stand for something. Successful design should make your users fall in love. And when it's really done its job, successful design should make a difference. <strong>That's the kind of design that gets results.</strong></p>
 							<p class="align-left">That's why I don't do quick fixes or cookie-cutter templates. Since 2011, I've focused on helping organizations that recognize the value of design and the clients who want to do it right. Let's imagine, design, build and ship an unforgettable experience that grows with you — <strong>and stays with your audience.</strong></p>
 						</div>
 					</div>
@@ -165,7 +165,7 @@
 											<li>Research &amp; Digital Strategy</li>
 											<li>Game Design &amp; Gamification</li>
 											<li>Content &amp; Email Marketing</li>
-											<li>Design Coaching &amp; Instruction</li>
+											<li>Coaching &amp; Teaching</li>
 										</ul>
 									</div>
 								</div>
@@ -284,7 +284,7 @@
 			<div id="social">
 				<div class="row">
 					<div class="twelve columns offset-by-two alpha omega">
-						<p class="ps-text"><strong>P.S.</strong> If Suen Labs isn't a good fit for you right now, that's OK, too. You can always read my monthly articles, where I write about the future, creating for yourself, and my best processes for work and play. Plus, millenials love it. <a href="http://www.suen.la" target="_blank" title="Suen La: A Newsletter for Creative Twentysomethings"><strong>Subscribe for free here.</strong></a></p>
+						<p class="ps-text"><strong>P.S.</strong> If WEIRDO isn't a good fit for you right now, that's okay! You can always read my monthly articles, where I write about the future, creating for yourself, and my best processes for work and play. Plus, millenials love it. <a href="http://www.suen.la" target="_blank" title="Suen La: A Newsletter for Creative Twentysomethings"><strong>Subscribe for free here.</strong></a></p>
 					</div>
 				</div>
 				<div class="row" id="social-center">
