--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 							<div class="row">
 								<div class="eight columns offset-by-four omega">
 									<p class="align-left subtitle"><strong>I'm Michael — a product designer for bold clients.</strong><p>
-									<p class="align-left">I run a design collective called <strong>WEIRDO</strong>, where we <a href="#" class="workplay"><span>work</span></a> with innovative organizations to build bold brands, campaigns, and digital products their tribe will ❤️. I believe the best experiences blur the line between <a href="#" class="workplay"><span>work</span></a> and <a href="#" class="playwork"><span>play</span></a>. Users love using them, and I love making them.</p>
+									<p class="align-left">I run a design collective called <strong>WEIRDO</strong>, where we <a href="#" class="workplay"><span>work</span></a> with innovative organizations to build bold brands and products their tribe will ❤️. I believe the best experiences blur the line between <a href="#" class="workplay"><span>work</span></a> and <a href="#" class="playwork"><span>play</span></a>. Users love using them, and I love making them.</p>
 									<p class="align-left">Projects I've <a href="#" class="workedplayed"><span>worked on</span></a> have been featured in <em>TechCrunch</em>, <em>Wall Street Journal</em> and <em><abbr title="National Public Radio">NPR</abbr></em>, won awards at <abbr title="South by Southwest">SXSW</abbr> and Games for Change, and involved partners like the United Nations and the Gates Foundation. I've taught <abbr title="user experience">UX</abbr> design at General Assembly and lectured on playful design at <abbr title="Massachussetts Institute of Technology">MIT</abbr> and Haverford College. In a former life, I <a href="#" class="workedplayed"><span>worked on</span></a> <a href="http://www.yuco.com/lab" target="_blank">holograms for museums</a> and <a href="http://www.learninggamesnetwork.org" target="_blank">video games for schools</a>.</p>
 									<p class="align-left">Spawned in the <a href="#tarpits" rel="leanModal">tar pits</a> of <abbr title="Los Angeles">L.A.</abbr>, raised by <a href="#capitalist" rel="leanModal">capitalist wolves</a> in Hong Kong, and educated on the <a href="http://en.wikipedia.org/wiki/Middlebury_College" target="_blank">icy planet</a> of <strike>Hoth</strike> Vermont, I now scheme from my home base in Boston and coffeeshop outposts around the world. <a href="#contact">Hire me, if you dare.</a></p>
 								</div>
@@ -253,7 +253,7 @@
 							<img src="../images/apple-touch-icon-152x152.png">
 							<h2>Let's <span class="typewriter">build</span>something together.</h2>
 							<div class="email-me fourteen columns offset-by-one alpha omega">
-								<p><strong>I have <em>one spot available</em> starting in October 2016.</strong></p>
+								<p><strong>I am <em>available for new client work</em> starting December 2016.</strong></p>
 								<p>If you're finally serious about turning your brand or product into a <strong>memorable experience</strong> with real personality and impact, I'd love to hear from you.</p>
 								<!-- Begin MailChimp Signup Form -->
 								<div id="mc_embed_signup">
