--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 		</div>
 		<div class="no_parallax_mobile__layer">
 			<header>
-			<h1>Michael Suen</h1><h6>Designer for bold clients</h6>
+			<h1>Michael Suen</h1><h6>Designer + Creative Director</h6>
 			</header>
 		</div>
 		<div class="parallax__cover">
@@ -119,10 +119,10 @@
 							</div>
 							<div class="row">
 								<div class="eight columns offset-by-four omega">
-									<p class="align-left subtitle"><strong>I'm Michael — a product designer for bold clients.</strong><p>
-									<p class="align-left">I run a design collective called <strong>WEIRDO</strong>, where we <a href="#" class="workplay"><span>work</span></a> with innovative organizations to build bold brands and products their tribe will ❤️. I believe the best experiences blur the line between <a href="#" class="workplay"><span>work</span></a> and <a href="#" class="playwork"><span>play</span></a>. Users love using them, and I love making them.</p>
-									<p class="align-left">Projects I've <a href="#" class="workedplayed"><span>worked on</span></a> have been featured in <em>TechCrunch</em>, <em>Wall Street Journal</em> and <em><abbr title="National Public Radio">NPR</abbr></em>, won awards at <abbr title="South by Southwest">SXSW</abbr> and Games for Change, and involved partners like the United Nations and the Gates Foundation. I've taught <abbr title="user experience">UX</abbr> design at General Assembly and lectured on playful design at <abbr title="Massachussetts Institute of Technology">MIT</abbr> and Haverford College. In a former life, I <a href="#" class="workedplayed"><span>worked on</span></a> <a href="http://www.yuco.com/lab" target="_blank">holograms for museums</a> and <a href="http://www.learninggamesnetwork.org" target="_blank">video games for schools</a>.</p>
-									<p class="align-left">Spawned in the <a href="#tarpits" rel="leanModal">tar pits</a> of <abbr title="Los Angeles">L.A.</abbr>, raised by <a href="#capitalist" rel="leanModal">capitalist wolves</a> in Hong Kong, and educated on the <a href="http://en.wikipedia.org/wiki/Middlebury_College" target="_blank">icy planet</a> of <strike>Hoth</strike> Vermont, I now scheme from my home base in Boston and coffeeshop outposts around the world. <a href="#contact">Hire me, if you dare.</a></p>
+									<p class="align-left subtitle"><strong>I'm Michael — and I'm interested in the future.</strong><p>
+									<p class="align-left">I run a design collective called <a href="http://weareweirdo.com target="_blank"><strong>Weirdo</strong></a>, where we <a href="#" class="workplay"><span>work</span></a> with early-stage teams to define their concept, validate their idea, and build future-facing brands and products that people want. I believe the best experiences blur the line between <a href="#" class="workplay"><span>work</span></a> and <a href="#" class="playwork"><span>play</span></a>. Users love using them, and I love making them.</p>
+									<p class="align-left">Projects I've <a href="#" class="workedplayed"><span>worked on</span></a> have been featured in <em>TechCrunch</em>, <em>Wall Street Journal</em> and <em><abbr title="National Public Radio">NPR</abbr></em>, won awards at <abbr title="South by Southwest">SXSW</abbr> and Games for Change, and involved partners like the United Nations and the Gates Foundation. I've taught <abbr title="user experience">UX</abbr> design at General Assembly and lectured on playful learning at <abbr title="Massachussetts Institute of Technology">MIT</abbr> and Haverford College. In a former life, I <a href="#" class="workedplayed"><span>worked on</span></a> <a href="http://www.yuco.com/lab" target="_blank">installations for museums</a> and <a href="http://www.learninggamesnetwork.org" target="_blank">video games for schools</a>.</p>
+									<p class="align-left">Spawned in the <a href="#tarpits" rel="leanModal">tar pits</a> of <abbr title="Los Angeles">L.A.</abbr>, raised by <a href="#capitalist" rel="leanModal">capitalist wolves</a> in Hong Kong, and educated on the <a href="http://en.wikipedia.org/wiki/Middlebury_College" target="_blank">icy planet</a> of <strike>Hoth</strike> Vermont, I now scheme from outposts around the world. <a href="#contact">Hire me, if you dare.</a></p>
 								</div>
 							</div>
 						</div>
@@ -221,10 +221,7 @@
 								</div>
 								<div id="21cl-d" class="description window-no">
 									<p class="item-description"><a href="http://www.21c-learning.com/" target="_blank">21st Century Learning</a> is a global educational consultancy that helps top international schools integrate educational technology into their classrooms. I designed and built a handsome Wordpress website that allowed 21CL to highlight its services and centralize the management of its popular professional development programs for over 5,000 educators in one place. <a href="http://www.21c-learning.com/" target="_blank"><i class="fa fa-external-link"></i></a></p>
-								</div><!-- 
-								<div id="vimpact-d" class="description window-no">
-									<p class="item-description"><a href="http://www.thevimpact.com/" target="_blank">Vimpact</a> is a mobile video platform (currently in beta) that allows users to record themselves completing real-world challenges for money. I delivered brand strategy, product design, and marketing website design, ensuring that the user's experience is consistent and beautiful across all touchpoints. <a href="https://www.thevimpact.com" target="_blank"><i class="fa fa-external-link"></i></a></p>
-								</div> -->
+								</div>
 								<div id="lgn-d" class="description window-no">
 									<p class="item-description"><a href="https://www.behance.net/gallery/14510391/Learning-Games-Network" target="_blank">Learning Games Network</a> is a non-profit educational game studio spun out from MIT. I designed brand identities, marketing websites, and related assets across the organization, including its various game properties and educational initiatives, from the ground up. I also created and tested rapid and functional prototypes for the online language learning game, <a href="http://www.xenos-isle.com/" target="_blank">Xenos</a>. In 2013, our ethics game <a href="http://www.quandarygame.org" target="_blank">Quandary</a> was named Game of the Year by the Games For Change Festival. <a href="https://www.behance.net/gallery/14510391/Learning-Games-Network" target="_blank"><i class="fa fa-external-link"></i></a></p>
 								</div>
@@ -253,7 +250,7 @@
 							<img src="../images/apple-touch-icon-152x152.png">
 							<h2>Let's <span class="typewriter">build</span>something together.</h2>
 							<div class="email-me fourteen columns offset-by-one alpha omega">
-								<p><strong>I am <em>available for new client work</em> starting December 2016.</strong></p>
+								<p><strong>I am <em>available for new client work</em> starting late February 2018.</strong></p>
 								<p>If you're finally serious about turning your brand or product into a <strong>memorable experience</strong> with real personality and impact, I'd love to hear from you.</p>
 								<!-- Begin MailChimp Signup Form -->
 								<div id="mc_embed_signup">
@@ -322,7 +319,7 @@
 						<div class="six columns alpha clearfix first-contact" style="clear: both;">
 							<h4>Make Contact</h4>
 							<div class="eight columns social-icons">
-								<a href="mailto:michael@suenlabs.com"><i class="fa fa-envelope fa-fw"></i> <span>E-mail</span></a>
+								<a href="mailto:michael@weareweirdo.com"><i class="fa fa-envelope fa-fw"></i> <span>E-mail</span></a>
 								<a href="http://www.linkedin.com/in/michaelsuen"><i class="fa fa-linkedin fa-fw"></i> <span>LinkedIn</span></a>
 								<a href="http://www.instagram.com/poetichentai"><i class="fa fa-instagram fa-fw"></i> <span>Instagram</span></a>
 							</div>
@@ -354,7 +351,7 @@
 			</div>
 		</div>
 		<div class="copyright-props">
-			<p class="copyright vertical-align">© Copyright 2014-2016 Suen Labs</p>
+			<p class="copyright vertical-align">© Copyright 2014-2017 Michael Suen</p>
 			<p class="props vertical-align">Inspired by <a href="http://pjrvs.com/" target="_blank">Paul Jarvis</a> and <a href="http://www.firewatchgame.com" target="_blank">Firewatch</a>. Built with <a href="http://www.getskeleton.com" target="_blank">Skeleton</a> and <a href="http://daneden.github.io/animate.css/" target="_blank">Animate.css</a>.</p>
 		</div>
 	</div>
